# taper

./: .gitignore  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-web/: app.tsx  index.html
src-web/components/: appahead.tsx  global.tsx  layout.tsx  navbar.tsx  tapepanel.tsx
