[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tiberius = "0.7.1"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["compat"] }
anyhow = "1.0.53"
once_cell = "1.9.0"
futures-util = "0.3.21"
futures = "0.3.21"
rusqlite = { version = "0.26.3", features = ["bundled"] }
uuid = "1.0.0-alpha.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
